<resources>
    <!-- Profiles -->
    <string name="app_name">Lock Scheduler</string>
    <string name="app_description">Automatically change your lock settings to keep your phone safe.</string>
    <string name="app_version">v0.1</string>
    <string name="app_version_full">Version v0.1</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="title_about">About</string>
    <string name="action_about">About</string>
    <string name="developer_name">Indrit Bashkimi</string>
    <string name="developer_email">indrit.bashkimi@gmail.com</string>
    <string name="feedback_subject">Feedback</string>
    <string name="feedback_chooser_title">Send email…</string>
    <string name="lock_scheduler_admin">Lock Scheduler</string>
    <string name="device_admin_description">Bla bla description</string>
    <string name="profile_modifier">Modify profile</string>
    <string name="profile_radius">%1$d</string>
    <string name="location_permission_rationale">LockScheduler requires location permission to change lock settings when you go to certain places.</string>
    <string name="device_admin_permission_rationale">LockScheduler requires device admin permission to change lock settings.</string>
    <string name="action_ask_again">Ask again</string>
    <string name="action_go_settings">Settings</string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="permission_action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="help">Help</string>
    <string name="fragment_help_title">@string/help</string>
    <string name="fragment_licences_title">Licenses</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="auto">Auto</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="ok">@android:string/ok</string>
    <string name="website">Website</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_title">Profile</string>
    <string name="new_profile">New profile</string>
    <style name="empty_profile_message">Profiles cannot be empty</style>
    <string name="no_profiles">No profiles</string>

    <!-- Settings -->
    <string name="dialog_action_cancel">@string/cancel</string>
    <string name="dialog_action_ok">@string/ok</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_title_loitering_delay">Loitering delay</string>
    <string name="pref_title_password_expiration">Reset password</string>
    <string name="appearance_preference">Appearance</string>
    <string name="pref_about">About</string>
    <string name="pref_title_rate_app">Rate this app</string>
    <string name="pref_title_licenses">Licenses</string>
    <string name="pref_summary_licenses">Dettagli delle licenze per il software open source</string>
    <string name="title_version">Version</string>
    <string name="summary_version">1.0</string>
    <string name="spinner_prompt_policy">Policy</string>
    <string name="pref_title_night_mode">Night mode</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_map_style">Map style</string>
    <string name="pref_map_style_normal">Normal</string>
    <string name="pref_map_style_satellite">Satellite</string>
    <string name="pref_map_style_hybrid">Hybrid</string>
    <string name="pref_map_style_terrain">Terrain</string>
    <string name="pref_appearance_profile_item_layout">Profile item layout</string>
    <string name="pref_header_backup">Backup and Restore</string>
    <string name="pref_title_backup">Backup</string>
    <string name="pref_title_restore">Restore</string>
    <string name="pref_title_reset">Reset</string>
    <string name="pref_title_min_password_length">Minimum Password length</string>
    <string name="pref_title_min_pin_length">Minimum PIN length</string>
    <string name="pref_min_password_length_dialog_title">Minimum Password Length</string>
    <string name="pref_min_pin_length_dialog_title">Minimum Length</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_show_notifications">Show notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_colored_navigation_bar">Colored Navigation bar</string>
    <string name="pref_colored_navigation_bar_summary">Whether or not the system navigation bar is colored with the skin</string>

    <!-- Add Edit Profile -->
    <string name="loading_profiles_error">Error while loading profiles</string>
    <string name="no_profiles_all">You have no Profiles!</string>
    <string name="successfully_saved_profile_message">Profile saved</string>
    <string name="successfully_removed_profile_message">Profile deleted</string>
    <string name="empty_profile_message">Profiles cannot be empty</string>
    <string name="edit_profile">Edit profile</string>
    <string name="conditions_title">Conditions</string>
    <string name="actions_title">Screen lock</string>
    <string name="set_place">Set place</string>
    <string name="place_condition_title">Place</string>
    <string name="time_condition_title">Time</string>
    <string name="wifi_condition_title">Wifi</string>
    <string name="turn_on_wifi">Turn on Wi-Fi</string>
    <string name="place_picker_search">Search</string>
    <string name="place_picker_activity">Pick Place</string>
    <string name="wifi_picker_activity">Wi-Fi</string>
    <string name="new_profile_title">New profile</string>
    <string name="pin_input_hint">Insert PIN</string>
    <string name="password_input_hint">Insert Password</string>
    <string name="pin_mismatch_error">PINs don\'t match</string>
    <string name="pin_short_error">PIN too short.</string>
    <string name="password_mismatch_error">Passwords don\'t match.</string>
    <string name="password_short_error">Password too short.</string>
    <string name="action_delete_profile">Delete</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thur</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>
    <string name="add_edit_profile_name">Name</string>
    <string name="place_picker_select_location">Select this location</string>
    <string name="place_picker_permission_denied">Permission denied</string>
    <string name="time_condition_interval_error">Interval error.</string>
    <string name="time_condition_days_selection_none">None</string>
    <string name="time_condition_days_selection_all">Everyday</string>
    <string name="time_condition_days">Days</string>
    <string name="time_condition_start_time">Start time</string>
    <string name="time_condition_end_time">End time</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin_length_message">PIN must be 4 digits</string>
    <string name="continue_text">Continue</string>
    <string name="confirm_password">Confirm password</string>
    <plurals name="pin_digits">
        <item quantity="one">PIN must be at least %d digit</item>
        <item quantity="other">PIN must be at least %d digits</item>
    </plurals>
    <plurals name="password_digits">
        <item quantity="one">Password must be at least %d digit</item>
        <item quantity="other">Password must be at least %d digits</item>
    </plurals>

    <!-- About -->
    <string name="author_name">Indrit Bashkimi</string>
    <string name="author_email">Indrit Bashkimi &lt;indrit.bashkimi@gmail.com&gt;</string>
    <string name="social_facebook">https://www.facebook.com/indrit.bashkimi</string>
    <string name="social_twitter">https://twitter.com/indritbashkimi</string>
    <string name="social_google_plus">https://plus.google.com/u/0/+IndritBashkimi</string>
    <string name="social_github">https://github.com/indritbashkimi</string>
    <string name="developer">Developer</string>
    <string name="about_header_help">Help</string>
    <string name="about_help">Help</string>
    <string name="about_send_feedback">Send feedback</string>
    <string name="about_header_legal">Legal</string>
    <string name="about_github">GitHub</string>
    <string name="about_google_plus">Google Plus</string>
    <string name="about_twitter">Twitter</string>
    <string name="about_facebook">Facebook</string>
    <string name="about_email">E-mail</string>
    <string name="about_header_contact">Contact</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_privacy_policy">Privacy Policy</string>
</resources>
