<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:key="appearance"
        android:title="@string/appearance_preference">

        <android.support.v7.preference.ListPreference
            android:defaultValue="auto"
            android:entries="@array/pref_night_mode_human_value"
            android:entryValues="@array/pref_night_mode_phone_value"
            android:key="night_mode"
            android:summary="%s"
            android:title="@string/pref_title_night_mode" />

        <android.support.v7.preference.Preference
            android:key="theme"
            android:title="@string/pref_title_theme" />

        <android.support.v7.preference.ListPreference
            android:defaultValue="normal"
            android:entries="@array/pref_map_style_human"
            android:entryValues="@array/pref_map_style_value"
            android:key="map_style"
            android:summary="%s"
            android:title="@string/pref_title_map_style" />

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="colored_navigation_bar"
            android:summary="@string/pref_colored_navigation_bar_summary"
            android:title="@string/pref_colored_navigation_bar" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/pref_header_general">

        <android.support.v7.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_loitering_delay_titles"
            android:entryValues="@array/pref_loitering_delay_values"
            android:key="loitering_delay"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/pref_title_loitering_delay" />

        <android.support.v7.preference.EditTextPreference
            android:defaultValue="4"
            android:dialogLayout="@layout/pref_dialog_edit_text_fix"
            android:dialogTitle="@string/pref_min_password_length_dialog_title"
            android:key="min_password_length"
            android:numeric="integer"
            android:summary="%s"
            android:title="@string/pref_title_min_password_length" />

        <android.support.v7.preference.EditTextPreference
            android:defaultValue="4"
            android:dialogLayout="@layout/pref_dialog_edit_text_fix"
            android:dialogTitle="@string/pref_min_pin_length_dialog_title"
            android:key="min_pin_length"
            android:numeric="integer"
            android:summary="%s"
            android:title="@string/pref_title_min_pin_length" />

        <android.support.v7.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_password_expiration_timeout_titles"
            android:entryValues="@array/pref_password_expiration_timeout_values"
            android:key="password_expiration"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/pref_title_password_expiration" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/pref_notifications">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="notifications_show"
            android:title="@string/pref_title_show_notifications" />

        <android.support.v7.preference.Preference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_show"
            android:key="notifications_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="notifications_show"
            android:key="notifications_vibrate"
            android:title="@string/pref_title_vibrate" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/pref_header_backup">

        <android.support.v7.preference.Preference
            android:key="backup"
            android:title="@string/pref_title_backup" />

        <android.support.v7.preference.Preference
            android:key="restore"
            android:title="@string/pref_title_restore" />

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
