<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/MyPreferenceCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appearance_preference" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:listDivider"
            android:orientation="vertical"
            android:showDividers="middle">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/night_mode"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@android:id/title"
                    style="@style/MyPreferenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_title_night_mode" />

                <TextView
                    android:id="@android:id/summary"
                    style="@style/MyPreferenceSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/theme"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@android:id/title"
                    style="@style/MyPreferenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_title_theme" />

            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/map_style"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@android:id/title"
                    style="@style/MyPreferenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_title_map_style" />

                <TextView
                    android:id="@android:id/summary"
                    style="@style/MyPreferenceSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/profile_item_layout"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@android:id/title"
                    style="@style/MyPreferenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_appearance_profile_item_layout" />

                <TextView
                    android:id="@android:id/summary"
                    style="@style/MyPreferenceSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/colored_nav_bar"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/coloredCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@android:id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/coloredCheckbox"
                    android:ellipsize="marquee"
                    android:fontFamily="sans-serif"
                    android:maxLines="1"
                    android:text="@string/pref_colored_navigation_bar"
                    android:textAppearance="@style/Preference_TextAppearanceMaterialSubhead"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@android:id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/coloredCheckbox"
                    android:layout_alignParentStart="true"
                    android:layout_below="@android:id/title"
                    android:layout_toStartOf="@id/coloredCheckbox"
                    android:maxLines="10"
                    android:text="@string/pref_colored_navigation_bar_summary"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorSecondary" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            style="@style/MyPreferenceCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_header_general" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:listDivider"
            android:orientation="vertical"
            android:showDividers="middle">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/loitering_delay"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@android:id/title"
                    style="@style/MyPreferenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_title_loitering_delay" />

                <TextView
                    android:id="@android:id/summary"
                    style="@style/MyPreferenceSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/min_pass_len"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@android:id/title"
                    style="@style/MyPreferenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_title_min_password_length" />

                <TextView
                    android:id="@android:id/summary"
                    style="@style/MyPreferenceSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/min_pin_len"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@android:id/title"
                    style="@style/MyPreferenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_title_min_pin_length" />

                <TextView
                    android:id="@android:id/summary"
                    style="@style/MyPreferenceSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/password_expiration"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@android:id/title"
                    style="@style/MyPreferenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_title_password_expiration" />

                <TextView
                    android:id="@android:id/summary"
                    style="@style/MyPreferenceSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            style="@style/MyPreferenceCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_notifications" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:listDivider"
            android:orientation="vertical"
            android:showDividers="middle">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/show_notifications"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/notificationSwitchView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@android:id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/notificationSwitchView"
                    android:ellipsize="marquee"
                    android:fontFamily="sans-serif"
                    android:maxLines="1"
                    android:text="@string/pref_title_show_notifications"
                    android:textAppearance="@style/Preference_TextAppearanceMaterialSubhead"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ringtone"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@android:id/title"
                    style="@style/MyPreferenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_title_ringtone" />

            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/vibrate"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/vibrateSwitchView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@android:id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/vibrateSwitchView"
                    android:ellipsize="marquee"
                    android:fontFamily="sans-serif"
                    android:maxLines="1"
                    android:text="@string/pref_title_vibrate"
                    android:textAppearance="@style/Preference_TextAppearanceMaterialSubhead"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            style="@style/MyPreferenceCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_header_backup" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:listDivider"
            android:orientation="vertical"
            android:showDividers="middle">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/backup"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@android:id/title"
                    style="@style/MyPreferenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_title_backup" />

            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/restore"
                style="@style/MyPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@android:id/title"
                    style="@style/MyPreferenceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_title_restore" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
